SimpleFlask/traefik-referencegrant.yml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: simple-flask-rg
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: traefik
  to:
    - group: ""
      kind: Service
