SimpleFlask/traefik-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: simple-flask-gw
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      protocol: HTTP
      port: 8000
      hostname: "simple-flask.lab.local"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              gateway: simple-flask
        kinds:
          - kind: HTTPRoute
